--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -8,10 +8,14 @@ on:
     paths:
       - '**/Cargo.toml'
       - '**/Cargo.lock'
+    branches:
+      - main
   pull_request:
     paths:
       - '**/Cargo.toml'
       - '**/Cargo.lock'
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
