--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "textcon"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 authors = ["Vladyslav \"Hex\" Yamkovyi <hex@aleph0.ai>"]
 description = "Template text files with file/directory references for AI/LLM consumption"
@@ -25,6 +25,14 @@ regex = "1.11"
 walkdir = "2.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+globset = "0.4"
 
 [dev-dependencies]
 tempfile = "3.21"
+
+[profile.release]
+opt-level = 3
+strip = true
+lto = true
+codegen-units = 1
+panic = "abort"
