--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "textcon"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 authors = ["Vladyslav \"Hex\" Yamkovyi <hex@aleph0.ai>"]
 description = "Template text files with file/directory references for AI/LLM consumption"
@@ -21,14 +21,15 @@ path = "src/lib.rs"
 [dependencies]
 clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
 thiserror = "2.0"
-regex = "1.11"
+regex = "1.12"
 walkdir = "2.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 globset = "0.4"
+ignore = "0.4.25"
 
 [dev-dependencies]
-tempfile = "3.21"
+tempfile = "3.23"
 
 [profile.release]
 opt-level = 3
