Accept files/dirs as positional, template optional

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "textcon"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2024"
-authors = ["Vladyslav \"Hex\" Yamkovyi <hex@aleph0.ai>"]
+authors = ["0x484558 <hex@aleph0.ai>"]
 description = "Template text files with file/directory references for AI/LLM consumption"
 repository = "https://github.com/0x484558/textcon"
 license = "EUPL-1.2"
